added the database

--- a/catcab/app/example/views/getting-started.html
+++ b/catcab/app/example/views/getting-started.html
@@ -9,7 +9,7 @@
  
 
   <super-navigate view-id="learn-more">
-    <button class="button button-block button-positive icon-left super-university">Go!</button>
+    <button class="button button-block button-positive">Go!</button>
   </super-navigate>
 
   
