cleaned up dummy files and added comments

--- a/catcab/app/users/views/index.html
+++ b/catcab/app/users/views/index.html
@@ -20,12 +20,13 @@
       </label>
   </div>
 
-  <super-modal-show location="users#new">
+  <!-- <super-modal-show location="users#new">  -->
     <button class="button button-full button-positive">
       Create a new users
     </button>
-  </super-modal-show>
+  <!-- </super-modal-show> -->
 
+  
   <ul id="example-messages" class="example-chat-messages">
     <li ng-repeat="user in users">
       <strong class="example-chat-username">{{ user.Name }}</strong>
