Photo uploading and displaying locally, photo display from hard-coded database
This code has two parts:
1. User can choose to upload a photo from their phone, and the app will
display it on the page.
2. In the user loop, we now display name, terminal, and imgSrc.
Currently, I hard-coded a base64 string as a field for one of the users
in the firebase browser screen, so one image should display next to the
name of the person who uploaded that image.

TODO:
1. After a user uploads a photo, send the base64 string ($scope.imgSrc)
to the database in the user’s imgSrc field.
2. After a pair of users is matched, display the user’s match’s photo
on the user’s screen so they know who to look for. (Access via
something like user.matchId.imgSrc)

--- a/catcab/app/users/views/index.html
+++ b/catcab/app/users/views/index.html
@@ -35,8 +35,21 @@
     <li> List of user names and locations in the database right now </li>
     <li ng-repeat="user in users">
       <strong class="example-chat-username">{{ user.firstName }}, {{ user.terminal }}</strong>
+      <!-- Testing imgSrc. It works! -->
+      <!-- This displays all base64 images that exist in the database next to the image's user's name and terminal -->
+      <!-- (Currently the database-side images are hard-coded via the web interface)-->
+      <img width="50%" height = "50%" ng-src="{{ user.imgSrc}}">
     </li>
   </ul>
 
+  <!-- Image upload and display -->
+  <!-- This does not currently push to the database. It just lets the user upload a photo, converts the photo to base64, then displays the photo on the page -->
+  <div>
+    <button class="button button-full button-positive icon-left super-image" ng-click="getImage()">Upload Photo</button> 
+
+        <p>Your uploaded image:</p>
+        <img  width="100%" height="100%" ng-src="{{imgSrc}}">
+        <!-- <p>Image data (in base 64) should appear below:</p>
+        <p id="Data">Data: {{imgData}}</p> -->
 
 </div>
