match result shows

--- a/catcab/app/users/views/index.html
+++ b/catcab/app/users/views/index.html
@@ -53,7 +53,11 @@
   </div>
 
 <div ng-show="matchStatus">
-  <h3> matched!!!</h3>
+  <h3> Matched!!!</h3>
+   <h3> Name: {{match.firstName}} {{match.lastName}}</h3>
+   <h3>Call: {{match.phone}} </h3>
+   <h3>Terminal: {{match.terminal}} </h3>
+
 </div>
   <!-- <super-modal-show location="users#new">  -->
     
