--- a/catcab/app/users/views/index.html
+++ b/catcab/app/users/views/index.html
@@ -5,21 +5,20 @@
     </super-navbar-title>
   </super-navbar>
 
+<!-- Hide the form when a match is found -->
  <div class="info" ng-hide="matchStatus">
-     <img width="50%" height = "50%" ng-src="{{ user.imgSrc}}">
+     <img width="100%" height = "100%" ng-src="{{ user.imgSrc}}">
      <div>
-      <!-- Image upload and display -->
-  <!-- This does not currently push to the database. It just lets the user upload a photo, converts the photo to base64, then displays the photo on the page -->
-  
+    <!-- Choose a photo to upload from user's camera roll -->
     <button class="button button-full button-positive icon-left super-image" ng-click="getImage()">Upload Photo</button> 
-
-        <p>Your uploaded image:</p>
+        <!-- Display image-->
         <img  width="100%" height="100%" ng-src="{{imgSrc}}">
         <!-- <p>Image data (in base 64) should appear below:</p>
         <p id="Data">Data: {{imgData}}</p> -->
 
   </div>
 </div>  
+<!-- Hide the form when a match is found -->
 <!-- new user form filled out for user information, connected to addUser function -->
   <div class="info" ng-hide="matchStatus">
     <form ng-submit="addUser()">
@@ -52,8 +51,10 @@
     </form>
   </div>
 
+<!-- Show the result when a match is found -->
 <div ng-show="matchStatus">
   <h3> Matched!!!</h3>
+  <img width="100%" height = "100%" ng-src="{{ match.imgSrc}}">
    <h3> Name: {{match.firstName}} {{match.lastName}}</h3>
    <h3>Call: {{match.phone}} </h3>
    <h3>Terminal: {{match.terminal}} </h3>
