hide/show, text clearing, UI

--- a/catcab/app/common/stylesheets/application.css
+++ b/catcab/app/common/stylesheets/application.css
@@ -3,3 +3,8 @@
   text-align: center;
   font-weight: 600;
 }
+
+.button{
+	background-color: rgb(131, 110, 170) !important; 
+	border: none !important;
+}
