--- a/catcab/app/common/native-styles/ios.css
+++ b/catcab/app/common/native-styles/ios.css
@@ -4,13 +4,13 @@
  ***********************************************************/
 
 navigation-bar {
-  background-color: #00B5FF;
+  background-color: rgb(064, 031, 104);
   color: #ffffff;
 }
 
 navigation-bar title {
   color: #ffffff;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 600;
 }
 
