--- a/catcab/app/users/views/index.html
+++ b/catcab/app/users/views/index.html
@@ -38,10 +38,7 @@
           <div class="input-label">Origin</div>
            
           <select ng-model="terminal">
-            <option>ORD - Terminal 1</option>
-            <option>ORD - Terminal 2</option>
-            <option>ORD - Terminal 3</option>
-            <option>ORD - Terminal 4</option>
+            <option ng-repeat="origin in origins">{{origin.name}}</option>
           </select>
         </label>
 
@@ -49,10 +46,7 @@
           <div class="input-label">Destination</div>
            
           <select ng-model="destination">
-            <option>Northwestern - North Campus</option>
-            <option>Northwestern - South Campus</option>
-            <option>Downtown Evanston</option>
-            <option>Loyola</option>
+            <option ng-repeat="destination in destinations">{{destination.name}}</option>
           </select>
         </label>
 
