--- a/catcab/app/users/views/index.html
+++ b/catcab/app/users/views/index.html
@@ -7,18 +7,18 @@
 
 <h3 style="text-align: center;"> Welcome to O'Hare airport!</h3>
 <!-- Hide the image when a match is found -->
- <div class="info" ng-hide="matchStatus || waiting">
+ <div class="info" ng-hide="matchStatus || waiting" >
     <!--  <img width="100%" height = "100%" ng-src="{{ user.imgSrc}}"> -->
      <div>
      <!-- Display image-->
-      <div ng-hide="matchStatus || waiting">
-        <img  width="100%" height="100%" ng-src="{{imgSrc}}">
+      <div> <!-- took out ng-hide -->
+        <img  class="img_center" ng-src="{{imgSrc}}">
       </div>
     <!-- Choose a photo to upload from user's camera roll -->
     <button class="button button-full button-positive icon-left super-image" ng-click="getImage()" ng-hide="imgData">Upload Photo</button> 
         <!-- <p>Image data (in base 64) should appear below:</p>
         <p id="Data">Data: {{imgData}}</p> -->
-  </div>
+  </div> 
 </div>  
 <!-- Hide the form when a match is found -->
 <!-- new user form filled out for user information, connected to addUser function -->
@@ -66,8 +66,11 @@
 <!-- Indicate no match has been found so far -->
 <div ng-show="!matchStatus && waiting">
   <div class="card">
-    <div class="item item-text-wrap">
+    <div class="item item-text-wrap" ng-hide="matched_previously">
       Your match is coming soon!
+    </div>
+    <div class="item item-text-wrap" ng-show="matched_previously">
+      Sorry, your match disconnected! <br> A new match is coming soon!
     </div>
   </div>
   <div class="spinner">
@@ -75,18 +78,21 @@
     <div class="bounce2"></div>
     <div class="bounce3"></div>
   </div>
+  <button class="button button-full button-positive" type="submit" ng-click="cancel()" >
+        Cancel
+  </button>
 </div>
 
 <!-- Show the result when a match is found -->
 <!-- Show the result when a match is found -->
 <div ng-show="matchStatus">
+  <div>
+       <img class="img_center" ng-src="{{ match.imgSrc}}">
+  </div>
   <div class="list card">
     <div class="item item-text-wrap">
       <h3> We found you a match! You will be riding with: </h3>
       <h2> <b> {{match.firstName}} {{match.lastName}} </b></h2>
-    </div>
-    <div class="item item-image">
-        <img width="100%" height = "100%" ng-src="{{ match.imgSrc}}">
     </div>
     <div class="item">
       <h2> Phone: {{match.phone}} </h2>
@@ -94,6 +100,9 @@
       <h2> Destination: {{match.destination}}</h2>
     </div>
   </div> 
+  <button class="button button-full button-positive" type="submit" ng-click="cancel()">
+        Cancel
+  </button>
 </div>
   <!-- <super-modal-show location="users#new">  -->
     
