Working login and sign-up
Need to look into correct navigation

--- a/catcab/app/users/views/index.html
+++ b/catcab/app/users/views/index.html
@@ -1,7 +1,10 @@
 <div ng-controller="IndexController">
   <super-navbar>
+    <super-navbar-button side="left">
+      Home
+    </super-navbar-button>
     <super-navbar-title>
-          CatCab
+      CatCab
     </super-navbar-title>
   </super-navbar>
 <h3 style="text-align: center;">Ready to take a ride from {{currLocation}}?</h3>
