"Find Match" now adds user's newest trip information under their /matches array in firebase

--- a/catcab/app/users/views/match_form.html
+++ b/catcab/app/users/views/match_form.html
@@ -23,7 +23,7 @@
        <label class="item item-input item-select">
           <div class="input-label">Origin</div>
            
-          <select ng-model="terminal">
+          <select ng-model="origin">
             <option ng-repeat="loc in locations | orderBy:'order'">{{loc.name}}</option>
           </select>
         </label>
