Integrate match_form page with the rest of the app (login, home pages)

--- a/catcab/app/users/views/home.html
+++ b/catcab/app/users/views/home.html
@@ -8,4 +8,7 @@
     	</super-navbar-title>
   	</super-navbar>
 	<h3 style="text-align: center; width:100%;"> Hi {{firstName}} </h3>
+	<super-navigate view-id="match_form" location="users#match_form">
+  <button class="button button-block button-royal icon-left super-plus">Find New Match</button>
+  </super-navigate>
 </div>
