--- a/catcab/app/users/views/signup.html
+++ b/catcab/app/users/views/signup.html
@@ -33,6 +33,9 @@
       <label class="item item-input">
         <input type="tel" placeholder="Phone number" ng-model="phone">
       </label>
+      <label class="item item-input">
+        <input type="email" placeholder="email" ng-model="email">
+      </label>
       
       <div>
         <button class="button button-full button-positive" type="submit" >
@@ -40,4 +43,9 @@
         </button>
       </div>
     </form>
+      <div ng-hide="valid_email" style="width: 100%; ">
+    <h4 style="color: red; text-align: center;">
+      Sorry, the email is invalid. It should end with 'northwestern.edu'
+    </h4>
+  </div>
   </div>
