Styling changes and cancel/decline buttons hidden

--- a/catcab/app/users/views/home.html
+++ b/catcab/app/users/views/home.html
@@ -11,10 +11,10 @@
 	<super-navigate view-id="match_form" location="users#match_form">
   <button class="button button-block button-royal icon-left super-plus">Find New Match</button>
   </super-navigate>
-	<div ng-repeat="(key, match) in userme.matches" class="card">
-		<div ng-show="match.status == 'matched'" style="background-color:green; text-align: center;">
+	<div ng-repeat="(key, match) in userme.matches">
+		<div ng-show="match.status == 'matched'" class="card" style="background-color:#9fdfbf; text-align: center;">
 			<h4>Ride Request- Match Found!</h4>
-		  	<p>{{match.origin}} -> {{match.destination}}</p>
+		  	<p>{{match.origin}} ➝ {{match.destination}}</p>
 		  	<div ng-repeat="(key, user) in users">
 		  		<div ng-if="user.phone == match.myMatch.userId">
 		  			<p>Meet Your Match:</p>
@@ -23,13 +23,13 @@
 		  			<p>{{user.phone}}</p>
 		  		</div>
 		  	</div>
-			<button class="button button-positive" ng-click="decline_ride(key)">Decline Ride</button>
+			<!-- <button class="button button-positive" ng-click="decline_ride(key)">Decline Ride</button> -->
 		</div> 
-		<div ng-show="match.status == 'waiting'" style="background-color:yellow; text-align: center;">
+		<div ng-show="match.status == 'waiting'" class="card" style="background-color:#ffffb3; text-align: center;">
 			<h4>Ride Request- Waiting for Match</h4>
 			<h5>{{match.time}}</h5>
 		  	<p>{{match.origin}} ➝ {{match.destination}}</p>
-			<button class="button button-positive" ng-click="cancel_ride(key)">Cancel Ride</button>
+			<!-- <button class="button button-positive" ng-click="cancel_ride(key)">Cancel Ride</button> -->
 		</div> 
 	</div>
 </div>
