--- a/catcab/app/users/views/home.html
+++ b/catcab/app/users/views/home.html
@@ -12,24 +12,21 @@
   <button class="button button-block button-royal icon-left super-plus">Find New Match</button>
   </super-navigate>
 	<div ng-repeat="(key, match) in userme.matches">
-		<div ng-show="match.status == 'matched'" class="card" style="background-color:#9fdfbf; text-align: center;">
-			<h4>Ride Request- Match Found!</h4>
+		<div ng-show="match.status == 'matched'" ng-init="user = get_user(match.myMatch.userId)" class="card" style="background-color:#9fdfbf; text-align: center;">
+			<h4>Ride Request - Match Found!</h4>
 		  	<p>{{match.origin}} ➝ {{match.destination}}</p>
-		  	<div ng-repeat="(key, user) in users">
-		  		<div ng-if="user.phone == match.myMatch.userId">
-		  			<p>Meet Your Match:</p>
-		  			<img style="width: 40%" class="img_center" ng-src="{{user.imgSrc}}">
-		  			<h5>{{user.firstName}} {{user.lastName}}</h5>
-		  			<p>{{user.phone}}</p>
-		  		</div>
-		  	</div>
-			<!-- <button class="button button-positive" ng-click="decline_ride(key)">Decline Ride</button> -->
-		</div> 
+			<p>Meet Your Match:</p>
+			<img style="width: 40%" class="img_center" ng-src="{{user.imgSrc}}">
+			<h5>{{user.firstName}} {{user.lastName}}</h5>
+			<p>{{user.phone}}</p>
+			<button class="button button-positive" ng-click="cancel_ride(key)" style="margin-bottom: 12px;">Decline ride</button>
+		</div>
+
 		<div ng-show="match.status == 'waiting'" class="card" style="background-color:#ffffb3; text-align: center;">
-			<h4>Ride Request- Waiting for Match</h4>
-			<h5>{{match.time}}</h5>
+			<h4>Ride Request - Waiting for Match</h4>
+			<h5>{{pretty_time(match.time)}}</h5>
 		  	<p>{{match.origin}} ➝ {{match.destination}}</p>
-			<!-- <button class="button button-positive" ng-click="cancel_ride(key)">Cancel Ride</button> -->
-		</div> 
+			<button class="button button-positive" ng-click="cancel_ride(key)" style="margin-bottom: 12px;">Cancel request</button>
+		</div>
 	</div>
 </div>
