Centered a number lol

--- a/catcab/app/users/views/login.html
+++ b/catcab/app/users/views/login.html
@@ -4,7 +4,7 @@
 			CatCab
 		</super-navbar-title>
 	</super-navbar>
-	
+
 	<h3 style="text-align: center; width:100%;"> Login </h3>
 
 	<div class="phone_input" style="width: 50%; margin-top: 30%; margin-left:25%">
@@ -13,7 +13,7 @@
 				Phone number:
 			</h2>
 			<label class="item item-input">
-				<input style="width:50%; margin-left: 25%; text-align: center;" type="tel" placeholder="(xxx)-xxx-xxxx" ng-model="phone">
+				<input style="width:50%; text-align: center;" type="tel" placeholder="(xxx)-xxx-xxxx" ng-model="phone">
 			</label>
 
 
